--- a/app/templates/components/run-loop-queue.hbs
+++ b/app/templates/components/run-loop-queue.hbs
@@ -2,7 +2,7 @@
 
 <ul class="actions">
   {{#each queue.actions}}
-  <li class="action">
+  <li class="action cf">
     <pre>{{fn}}</pre>
   </li>
   {{/each}}
